# MediSight-AI

./: .env.example  .gitignore  README.md  main.py  medisight_ai_project_blueprint.html  mlflow.db  pyproject.toml
api/: main.py
app/: streamlit_app.py
etl/: extract.py  load.py  ml_config.py  pipeline.py  transform.py  validate.py
evaluation/: annotate.py  explain.py  faithfulness.py  lexicon.py  run_evaluation.py
models/: train.py
rag/: chain.py  ingest.py  retriever.py
reports/: faithfulness_results_condA.json  faithfulness_results_condB.json
scripts/: generate_data_quality_report.py  generate_synthea_notes.py
sql/: schema.sql
