[project]
name = "medisight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.3.0",
    "openai>=1.0.0",
    "mlflow>=3.12.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "ruff>=0.15.12",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
    "ydata-profiling>=4.18.4",
]
